add border template

--- a/index.html
+++ b/index.html
@@ -5,8 +5,81 @@
     <title>Résumé</title>
 
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <main>
+      <article>
+          <div class="page" style="border-color: midnightblue;">
+              <!-- Content -->
+
+              <div class="stackable grid">
+                  <div class="row">
+
+                      <div class="three wide center aligned column">
+                          <!-- Avatar -->
+                          <!--todo-->
+
+                      </div>
+                      
+                      <div class="thirteen wide column">
+                          <div class="stackable grid">
+                              <div class="sixteen wide column">
+                                  <!-- Name, job, contacts -->
+
+                                  <!-- todo -->
+
+                              </div>
+                              <div class="sixteen wide mobile only column">
+                                  <div class="divider"></div>
+                              </div>
+                              <div class="sixteen wide column">
+                                  <!-- Intro -->
+
+                                  <!-- todo -->
+
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="row">
+                      <div class="sixteen wide column">
+                          <div class="fat divider"></div>
+                      </div>
+                  </div>
+
+                  <div class="row">
+                      <div class="ten wide column">
+                          <!-- Experience -->
+
+                          <h3>Experience</h3>
+
+                          <h6>Resent</h6>
+                           <!-- Events -->
+
+                          <!-- todo -->
+
+
+                          <h6>Back then</h6>
+                          <!-- Timeline (older events) -->
+                          <!-- todo -->
+
+                      </div>
+                      <!-- todo  lang skills ets-->
+
+                      
+
+                  </div>
+
+              </div>
+          </div>
+
+
+      </article>
+
+  </main>
+  
   </body>
 </html>
