--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Résumé</title>
 
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./assets/styles/index.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
@@ -62,6 +64,17 @@
                                             <span>+38 (097)8674483</span>
                                         </a>
                                     </li>
+                                    <li>
+                                      <div class="like-widget">
+                                        <span  class="like-txt">Likes <span id="likeCounter"></span></span>
+                                        <span id="heartClick" class="like-heart">
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"  viewBox="0 0 16 16">
+                                            <path fill="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                                          </svg>
+                                        </span>
+                                        
+                                      </div>
+                                    </li>
                                 </ul>
                               </div>
 
@@ -116,4 +129,5 @@
   </main>
   
   </body>
+  <script src="./assets/scripts/script.js" defer></script>
 </html>
