--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
     <link rel="stylesheet" href="./assets/styles/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
-      article{
-        margin-bottom: 10vh;
-      }
-      .submit-form>input{
-        float: right;
-        padding: 0 3vw 0 3vw;
-      }
+
     </style>
   </head>
   <body>
@@ -93,7 +87,9 @@
                               <div class="sixteen wide column">
                                   <!-- Intro -->
                                   <h2>Résumé</h2>
-                                  <p>&mdash; Hello! I’m a typical student from ntuu kpi with 3 years of  experience in .net, database, front-end. I desire to build applications using all my skills</p>
+                                  <p>&mdash; Hello! I’m a student from ntuu kpi with 3 years of  experience in .net, database, front-end.
+                                     My desire is to build applications using all my skills.
+                                  </p>
                               </div>
                           </div>
                       </div>
@@ -279,10 +275,15 @@
 
 
       </article>
+      <div class="container">
+        <div class="row justify-content-center m-3">
+          <h1 class="display-2">Give us your feedback</h1>
+        </div>
+      </div>
 
-        <div class="container-fluid">
+        <div class="container">
           <div class="row justify-content-center">
-          <div class="col-4 col-lg-3 col-sm-6 page">
+          <div class="col-lg-5 col-sm-7 page">
             <form>
               <div class="form-group">
                 <label for="formNameInput">Enter your name</label>
