removed unnecessary info

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                 </div>
 
                                 <div>
-                                    <strong>Currentry getting bachelor's degree</strong> in 
+                                    <strong>Bachelor's degree</strong> in 
                                     <strong>Information systems and technology</strong> at 
                                     <a href="https://kpi.ua/" rel="external">
                                         <strong>Igor Sikorsky Kyiv Polytechnic Institute</strong>
@@ -286,52 +286,6 @@
                         </ul>
 
                     </section>
-
-                      <!-- Character -->
-
-                      <section>
-                          <h3>Character 
-                              <span class="chars">♂</span>  
-                            </h3>
-                          
-                          <p class="tags small">
-                              LEARNER  
-                              DEVOTED CONFIDENT CONSISTENT CHALLENGING
-                          </p>
-                      </section>
-
-                      <!-- Likes -->
-
-                      <section>
-                          <h3>Likes&#x1f603;</h3>
-                          <p class="tags small">
-                              HUMOUR FAMILYGUY
-                              <span class="nowrap">NA`VI</span> 
-                              <span class="nowrap">ATTENTION TO DETAILS</span> 
-                              GRAMMAR SPELLCHECK 
-                          </p>
-                      </section>
-
-                      <!-- Dislikes -->
-
-                      <section>
-                          <h3>Dislikes&#x1f61e;</h3>
-                          <p class="tags small">
-                          <span class="nowrap">OWN BAD HABITS</span> 
-                          AGGRESSION BAD PRONUNCIATION WORRING
-                      </section>
-
-                      <!-- Wants -->
-
-                      <section>
-                          <h3>Wants&#x1f97a;</h3>
-                          <p class="tags small bulleted">
-                              <span class="tag">WORK REMOTELY</span>
-                              <span class="tag">WORK IN OFFICE</span>
-                              <span class="tag">TO BE FIT AND HEALTHY</span>
-                              <span class="tag">TO OWN MY SCHEDULE</span>
-                          </p>
-                      </section>
 
 
 
