--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                                 </div>
 
                                 <div>
-                                    <strong>Currentry getting bachelor's degree</strong> in 
+                                    <strong>Bachelor's degree</strong> in 
                                     <strong>Information systems and technology</strong> at 
                                     <a href="https://kpi.ua/" rel="external">
                                         <strong>Igor Sikorsky Kyiv Polytechnic Institute</strong>
