--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
                       <section>
                           <h3>Character 
-                              <span class="chars">♂</span>  
+                              <!-- <span class="chars">♂</span>   -->
                             </h3>
                           
                           <p class="tags small">
