changed avatar, add colors

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                     <div class="col-sm-3">
                         <!-- Avatar -->
                         <div class="avatar-wrapper">
-                            <img class="avatar img img-fluid"  src="./assets/images/avatar.jpg" aria-label="My profile picture">
+                            <img class="avatar img img-fluid"  
+                                src="./assets/images/20210724_134857.jpg" 
+                                aria-label="My profile picture">
                         </div>
 
                     </div>
