--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Résumé</title>
+    <title>Trainee Front-end (React) developer</title>
 
     <link rel="icon" href="./assets/images/favicon.ico" />
 
@@ -115,7 +115,7 @@
                                 
                                 <div class="m-3 about">
                                     <!-- Intro -->
-                                    <h2 class="display-3">Résumé</h2>
+                                    <h2 class="display-3">Trainee Front-end (React) developer</h2>
 
                                     <p class="fs-3">&mdash; Hello! I have been programming for 4 years. <br> 
                                             I have experience with .net, database, front-end. <br>
