--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
                                 >javascript</a
                               >
                               <a href="https://reactjs.org/">react</a>
+                              <a href="https://miragejs.com/">miragejs</a>
+                              <a href="https://redux.js.org/">redux</a>
+                              <a href="https://firebase.google.com/"
+                                >firebase</a
+                              >
                             </p>
                           </div>
                         </li>
@@ -238,6 +243,25 @@
                               >
                               <a href="https://vuejs.org/">vue</a>
                               <a href="https://docs.docker.com/">docker</a>
+                            </p>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="project-container">
+                            <a
+                              href="https://github.com/sergTesst/announcements"
+                            >
+                              announcements
+                            </a>
+                          </div>
+                          <div>
+                            <p>
+                              <a href="https://reactjs.org/">react</a>
+                              <a href="https://redux.js.org/">redux</a>
+                              <a href="https://miragejs.com/">miragejs</a>
+                              <a href="https://firebase.google.com/"
+                                >firebase</a
+                              >
                             </p>
                           </div>
                         </li>
