--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <title>Trainee Front-end (React) developer</title>
     <link rel="icon" href="./assets/images/favicon.ico" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="./assets/styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,6 +46,7 @@
                       <li>
                         <a
                           href="https://www.linkedin.com/in/serhiikuzmych/"
+                          target="_blank"
                           rel="author"
                           class="linkedin"
                         >
@@ -88,6 +98,7 @@
                       <li>
                         <a
                           href="https://github.com/sergiycheck"
+                          target="_blank"
                           rel="author"
                           class="github"
                         >
@@ -181,6 +192,7 @@
                           <div class="project-container">
                             <a
                               href="https://github.com/sergiycheck/react-user-gallery"
+                              target="_blank"
                               >user gallery</a
                             >
                           </div>
@@ -188,12 +200,21 @@
                             <p>
                               <a
                                 href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+                                target="_blank"
                                 >javascript</a
                               >
-                              <a href="https://reactjs.org/">react</a>
-                              <a href="https://miragejs.com/">miragejs</a>
-                              <a href="https://redux.js.org/">redux</a>
-                              <a href="https://firebase.google.com/"
+                              <a href="https://reactjs.org/" target="_blank"
+                                >react</a
+                              >
+                              <a href="https://miragejs.com/" target="_blank"
+                                >miragejs</a
+                              >
+                              <a href="https://redux.js.org/" target="_blank"
+                                >redux</a
+                              >
+                              <a
+                                href="https://firebase.google.com/"
+                                target="_blank"
                                 >firebase</a
                               >
                             </p>
@@ -203,15 +224,20 @@
                           <div class="project-container">
                             <a
                               href="https://github.com/sergiycheck/vehiclesFront"
+                              target="_blank"
                               >angular vehicles web app</a
                             >
                           </div>
                           <div>
                             <p>
-                              <a href="https://angular.io/guide/what-is-angular"
+                              <a
+                                href="https://angular.io/guide/what-is-angular"
+                                target="_blank"
                                 >angular</a
                               >
-                              <a href="https://www.typescriptlang.org/"
+                              <a
+                                href="https://www.typescriptlang.org/"
+                                target="_blank"
                                 >typescript</a
                               >
                             </p>
@@ -221,6 +247,7 @@
                           <div class="project-container">
                             <a
                               href="https://github.com/sergiycheck/user-gallery"
+                              target="_blank"
                               >static web page with links</a
                             >
                           </div>
@@ -228,13 +255,20 @@
                             <p>
                               <a
                                 href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+                                target="_blank"
                                 >javascript</a
                               >
-                              <a href="https://angular.io/guide/what-is-angular"
+                              <a
+                                href="https://angular.io/guide/what-is-angular"
+                                target="_blank"
                                 >angular</a
                               >
-                              <a href="https://vuejs.org/">vue</a>
-                              <a href="https://docs.docker.com/">docker</a>
+                              <a href="https://vuejs.org/" target="_blank"
+                                >vue</a
+                              >
+                              <a href="https://docs.docker.com/" target="_blank"
+                                >docker</a
+                              >
                             </p>
                           </div>
                         </li>
@@ -242,16 +276,25 @@
                           <div class="project-container">
                             <a
                               href="https://github.com/sergTesst/announcements"
+                              target="_blank"
                             >
                               announcements
                             </a>
                           </div>
                           <div>
                             <p>
-                              <a href="https://reactjs.org/">react</a>
-                              <a href="https://redux.js.org/">redux</a>
-                              <a href="https://miragejs.com/">miragejs</a>
-                              <a href="https://firebase.google.com/"
+                              <a href="https://reactjs.org/" target="_blank"
+                                >react</a
+                              >
+                              <a href="https://redux.js.org/" target="_blank"
+                                >redux</a
+                              >
+                              <a href="https://miragejs.com/" target="_blank"
+                                >miragejs</a
+                              >
+                              <a
+                                href="https://firebase.google.com/"
+                                target="_blank"
                                 >firebase</a
                               >
                             </p>
@@ -259,20 +302,48 @@
                         </li>
 
                         <li class="details">
-                          <input type="checkbox" id="labs-check" />
-                          <label for="labs-check" class="summary"
-                            >University labs abstract</label
+                          <div
+                            id="labs-check"
+                            class="
+                              d-flex
+                              justify-content-between
+                              bg-info bg-gradient
+                              rounded
+                              p-2
+                              bg-opacity-25
+                            "
                           >
+                            <span for="labs-check" class="summary">
+                              University labs abstract
+                            </span>
+                            <i class="bi bi-chevron-down"></i>
+                          </div>
+
                           <div class="labs-content">
-                            <ul>
-                              <li>
-                                Build websites using html, css, js and
-                                frameworks
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">
+                                Develop websites using js, html, css, libraries,
+                                frameworks and server side technologies
                               </li>
-                              <li>Learn about it infrastructure</li>
-                              <li>Configure at linux terminal</li>
-                              <li>Learn Matlab, Simulink</li>
-                              <li>Learn circuts, microcontrollers, asm</li>
+                              <li class="list-group-item">
+                                Develop a lot of server side programs
+                              </li>
+                              <li class="list-group-item">
+                                Learn and implement algorithms, data structures,
+                                math problems...
+                              </li>
+                              <li class="list-group-item">
+                                Learn about it infrastructure
+                              </li>
+                              <li class="list-group-item">
+                                Configure at linux terminal
+                              </li>
+                              <li class="list-group-item">
+                                Learn Matlab, Simulink
+                              </li>
+                              <li class="list-group-item">
+                                Learn circuts, microcontrollers, asm
+                              </li>
                             </ul>
                           </div>
                         </li>
@@ -322,7 +393,7 @@
                   <section>
                     <h3>Skills</h3>
                     <p class="tags small">
-                      JAVASCRIPT HTML CSS BOOTSTRAP C C++
+                      JAVASCRIPT HTML CSS REACT REDUX SQL BOOTSTRAP C#
                       <span class="nowrap">MICROSOFT OFFICE</span>
                       LINUX WINDOWS MICROSOFT SQL
                     </p>
@@ -341,7 +412,11 @@
                         <div>
                           <strong>Bachelor's degree</strong> in
                           <strong>Information systems and technology</strong> at
-                          <a href="https://kpi.ua/" rel="external">
+                          <a
+                            href="https://kpi.ua/"
+                            rel="external"
+                            target="_blank"
+                          >
                             <strong
                               >Igor Sikorsky Kyiv Polytechnic Institute</strong
                             >
@@ -476,11 +551,6 @@
       </div>
     </main>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
     <script src="./assets/scripts/script.js" defer></script>
   </body>
 </html>
