change form input submin disabled styles

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                 <input
                   type="submit"
                   name="submit"
-                  class="btn border-success rounded"
+                  class="btn btn-info text-white"
                   value="Send"
                 />
               </div>
