--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Trainee Front-end (React) developer</title>
-    <link rel="icon" href="/assets/images/favicon.ico" />
+    <link rel="icon" href="./assets/images/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="/assets/styles/index.css" />
+    <link rel="stylesheet" href="./assets/styles/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
@@ -587,7 +587,7 @@
       <i class="bi bi-chevron-double-down"></i>
     </div>
 
-    <script src="/assets/scripts/script.js" defer></script>
-    <script src="/assets/scripts/hintsScript.js" defer></script>
+    <script src="./assets/scripts/script.js" defer></script>
+    <script src="./assets/scripts/hintsScript.js" defer></script>
   </body>
 </html>
